# offload

./: Cargo.toml  README.md
.beads/: issues.jsonl  last-touched
.github/: dependabot.yml
blueprint/migrate-deprecated-sandbox-apis/: plan-migrate-deprecated-sandbox-apis.md
scripts/: modal_sandbox.py
src/: connector.rs  main.rs  orchestrator.rs  provider.rs
src/config/: schema.rs
src/framework/: pytest.rs
src/history/: store.rs
src/orchestrator/: pool.rs  runner.rs  scheduler.rs
src/provider/: default.rs  local.rs  modal.rs
tests/: cli_logs.rs  cli_override_image_id.rs
